Bugzilla Bug 271883: remove FILE_HIDDEN from _PR_MD_OPEN.  _PR_MD_OPEN now completely ignores its mode argument, like it does on Windows.  The patch is contributed by Peter Weilbacher <mozilla@Weilbacher.org>. r=mkaply,wtc.